src/assets/styles/utillity.scss
/* Section */
.section {
  --inline-padding: 1rem;
  padding-inline: var(--inline-padding);
  padding-block: calc(var(--inline-padding) + 2rem);
}

.section--sm {
  max-width: calc(900px + 2 * var(--inline-padding));
  margin-inline: auto;
}

@media screen and (min-width: 640px) {
  .section {
    --inline-padding: 1.5rem;
  }
}

@media screen and (min-width: 768px) {
  .section {
    --inline-padding: 3rem;
  }
}

/* @media screen and (min-width: 1024px) {
  .section {
    --inline-padding: 4rem;
  }
} */

